Assert when opening default 2.79 startup file in 2.80 #62927

Closed
opened 2019-03-25 16:29:25 +01:00 by Jacques Lucke · 5 comments
Member

System Information
Operating system: Linux-4.15.0-46-generic-x86_64-with-Ubuntu-18.04-bionic 64 Bits
Graphics card: Radeon RX Vega (VEGA10, DRM 3.23.0, 4.15.0-46-generic, LLVM 7.0.0) X.Org 4.5 (Core Profile) Mesa 18.2.2

Blender Version
Broken: version: 2.80 (sub 51), branch: master, commit date: 2019-03-25 14:54, hash: 9cd970734b
Worked: (optional)

Exact steps for others to reproduce the error
Save the startup file in Blender 2.79 and try load it in Blender 2.80.

startup_279.blend

__GI_raise(int sig) (/build/glibc-OTsEL5/glibc-2.27/sysdeps/unix/sysv/linux/raise.c:51)
__GI_abort() (/build/glibc-OTsEL5/glibc-2.27/stdlib/abort.c:79)
BKE_scene_object_base_flag_sync_from_object(Base * base) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/scene.c:1740)
object_base_new(Object * ob) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/layer.c:99)
layer_collection_sync(ViewLayer * view_layer, const ListBase * lb_scene, ListBase * lb_layer, ListBase * new_object_bases, short parent_exclude, short parent_restrict, short parent_layer_restrict) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/layer.c:708)
layer_collection_sync(ViewLayer * view_layer, const ListBase * lb_scene, ListBase * lb_layer, ListBase * new_object_bases, short parent_exclude, short parent_restrict, short parent_layer_restrict) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/layer.c:668)
BKE_layer_collection_sync(const Scene * scene, ViewLayer * view_layer) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/layer.c:783)
BKE_view_layer_add(Scene * scene, const char * name) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/layer.c:193)
do_version_layers_to_collections(Main * bmain, Scene * scene) (/home/jacques/blender-git/blender/source/blender/blenloader/intern/versioning_280.c:455)
do_versions_after_linking_280(Main * bmain) (/home/jacques/blender-git/blender/source/blender/blenloader/intern/versioning_280.c:622)
do_versions_after_linking(Main * main) (/home/jacques/blender-git/blender/source/blender/blenloader/intern/readfile.c:9300)
blo_read_file_internal(FileData * fd, const char * filepath) (/home/jacques/blender-git/blender/source/blender/blenloader/intern/readfile.c:9570)
BLO_read_from_file(const char * filepath, eBLOReadSkip skip_flags, ReportList * reports) (/home/jacques/blender-git/blender/source/blender/blenloader/intern/readblenentry.c:314)
BKE_blendfile_read(bContext * C, const char * filepath, const struct BlendFileReadParams * params, ReportList * reports) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/blendfile.c:388)
WM_file_read(bContext * C, const char * filepath, ReportList * reports) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_files.c:600)
wm_file_read_opwrap(bContext * C, const char * filepath, ReportList * reports, const _Bool autoexec_init) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_files.c:1866)
wm_open_mainfile_exec(bContext * C, wmOperator * op) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_files.c:1926)
wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const _Bool poll_only, _Bool use_last_properties) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1353)
wm_operator_call_internal(bContext * C, wmOperatorType * ot, PointerRNA * properties, ReportList * reports, const short context, const _Bool poll_only, wmEvent * event) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1586)
WM_operator_name_call_ptr(bContext * C, wmOperatorType * ot, short context, PointerRNA * properties) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1598)
ui_apply_but_funcs_after(bContext * C) (/home/jacques/blender-git/blender/source/blender/editors/interface/interface_handlers.c:782)
ui_popup_handler(bContext * C, const wmEvent * event, void * userdata) (/home/jacques/blender-git/blender/source/blender/editors/interface/interface_handlers.c:10100)
wm_handler_ui_call(bContext * C, wmEventHandler_UI * handler, const wmEvent * event, int always_pass) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:585)
wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2491)
wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2720)
wm_event_do_handlers(bContext * C) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:3071)
WM_main(bContext * C) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm.c:418)
main(int argc, const char ** argv) (/home/jacques/blender-git/blender/source/creator/creator.c:505)
**System Information** Operating system: Linux-4.15.0-46-generic-x86_64-with-Ubuntu-18.04-bionic 64 Bits Graphics card: Radeon RX Vega (VEGA10, DRM 3.23.0, 4.15.0-46-generic, LLVM 7.0.0) X.Org 4.5 (Core Profile) Mesa 18.2.2 **Blender Version** Broken: version: 2.80 (sub 51), branch: master, commit date: 2019-03-25 14:54, hash: `9cd970734b` Worked: (optional) **Exact steps for others to reproduce the error** Save the startup file in Blender 2.79 and try load it in Blender 2.80. [startup_279.blend](https://archive.blender.org/developer/F6881452/startup_279.blend) ``` __GI_raise(int sig) (/build/glibc-OTsEL5/glibc-2.27/sysdeps/unix/sysv/linux/raise.c:51) __GI_abort() (/build/glibc-OTsEL5/glibc-2.27/stdlib/abort.c:79) BKE_scene_object_base_flag_sync_from_object(Base * base) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/scene.c:1740) object_base_new(Object * ob) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/layer.c:99) layer_collection_sync(ViewLayer * view_layer, const ListBase * lb_scene, ListBase * lb_layer, ListBase * new_object_bases, short parent_exclude, short parent_restrict, short parent_layer_restrict) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/layer.c:708) layer_collection_sync(ViewLayer * view_layer, const ListBase * lb_scene, ListBase * lb_layer, ListBase * new_object_bases, short parent_exclude, short parent_restrict, short parent_layer_restrict) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/layer.c:668) BKE_layer_collection_sync(const Scene * scene, ViewLayer * view_layer) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/layer.c:783) BKE_view_layer_add(Scene * scene, const char * name) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/layer.c:193) do_version_layers_to_collections(Main * bmain, Scene * scene) (/home/jacques/blender-git/blender/source/blender/blenloader/intern/versioning_280.c:455) do_versions_after_linking_280(Main * bmain) (/home/jacques/blender-git/blender/source/blender/blenloader/intern/versioning_280.c:622) do_versions_after_linking(Main * main) (/home/jacques/blender-git/blender/source/blender/blenloader/intern/readfile.c:9300) blo_read_file_internal(FileData * fd, const char * filepath) (/home/jacques/blender-git/blender/source/blender/blenloader/intern/readfile.c:9570) BLO_read_from_file(const char * filepath, eBLOReadSkip skip_flags, ReportList * reports) (/home/jacques/blender-git/blender/source/blender/blenloader/intern/readblenentry.c:314) BKE_blendfile_read(bContext * C, const char * filepath, const struct BlendFileReadParams * params, ReportList * reports) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/blendfile.c:388) WM_file_read(bContext * C, const char * filepath, ReportList * reports) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_files.c:600) wm_file_read_opwrap(bContext * C, const char * filepath, ReportList * reports, const _Bool autoexec_init) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_files.c:1866) wm_open_mainfile_exec(bContext * C, wmOperator * op) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_files.c:1926) wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const _Bool poll_only, _Bool use_last_properties) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1353) wm_operator_call_internal(bContext * C, wmOperatorType * ot, PointerRNA * properties, ReportList * reports, const short context, const _Bool poll_only, wmEvent * event) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1586) WM_operator_name_call_ptr(bContext * C, wmOperatorType * ot, short context, PointerRNA * properties) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1598) ui_apply_but_funcs_after(bContext * C) (/home/jacques/blender-git/blender/source/blender/editors/interface/interface_handlers.c:782) ui_popup_handler(bContext * C, const wmEvent * event, void * userdata) (/home/jacques/blender-git/blender/source/blender/editors/interface/interface_handlers.c:10100) wm_handler_ui_call(bContext * C, wmEventHandler_UI * handler, const wmEvent * event, int always_pass) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:585) wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2491) wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2720) wm_event_do_handlers(bContext * C) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:3071) WM_main(bContext * C) (/home/jacques/blender-git/blender/source/blender/windowmanager/intern/wm.c:418) main(int argc, const char ** argv) (/home/jacques/blender-git/blender/source/creator/creator.c:505) ```
Author
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Bastien Montagne was assigned by Sebastian Parborg 2019-03-25 17:25:56 +01:00

bisect tells me that 1638204ad4 is the commit that started causing this.

bisect tells me that 1638204ad4 is the commit that started causing this.

This issue was referenced by 82de58b318

This issue was referenced by 82de58b3184daf939b39659bbe0cd53209a30b6e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62927
No description provided.